add summary example

--- a/2025-09-04_debug/test_openrouter_openai_summary.ipynb
+++ b/2025-09-04_debug/test_openrouter_openai_summary.ipynb
@@ -38,13 +38,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "opinions = [\"Current abortion laws are too laxed, it should be illegal in all states. no children should be killed.\",\n",
     "\"I think everyone should bear arms freely. we should fight for our rights and protect ourselves. fuck the democrats\",\n",
-    "\"there should be more promotion opportunities for minorities and women in the workplace. Maternal leave should be longer and mandatory for all companies\"]\n"
+    "\"there should be more promotion opportunities for minorities and women in the workplace. Maternal leave should be longer and mandatory for all companies\",\n",
+    "\"There should be stricter gun control measures. It's crazy that in the most developed country in the world we still have school shooting.\"]\n"
    ]
   },
   {
